--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "test-task-pavel"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Nikolai Dudinov <nvdudinov@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -21,3 +21,14 @@ page = "^0.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+markers = [
+    "ui_test",
+    "api_test"
+]
+addopts = [
+    "--clean-alluredir",
+    "--alluredir=allure-results"
+]
+testpaths = ["tests"]
