--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,6 +28,10 @@ jobs:
         curl -sSL https://install.python-poetry.org | python3 -
         export PATH="$HOME/.poetry/bin:$PATH"
         poetry install
+    - name: Check Ruff
+      run: poetry run ruff check .
+    - name: Format with Black
+      run: poetry run black --check .
     - name: Test with pytest
       run: |
         poetry run pytest
