--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -52,16 +52,16 @@ jobs:
         ref: gh-pages
         path: gh-pages
 
-    - name: Test marketplace action
+    - name: Allure Report action from marketplace
       uses: simple-elf/allure-report-action@master
       if: always()
-      id: allure-report
+      #id: allure-report
       with:
         allure_results: allure-results
-        gh_pages: gh-pages
-        allure_report: allure-report
+        #gh_pages: gh-pages
+        #allure_report: allure-report
         allure_history: allure-history
-        keep_reports: 5
+        keep_reports: 20
 
     - name: Deploy report to Github Pages
       if: always()
