--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,6 +38,7 @@ jobs:
     - name: Test with pytest
       run: |
         poetry run pytest --headless=True
+
     - uses: actions/upload-artifact@master
       with:
           name: allure-results
@@ -55,11 +56,11 @@ jobs:
     - name: Allure Report action from marketplace
       uses: simple-elf/allure-report-action@master
       if: always()
-      #id: allure-report
+      id: allure-report
       with:
         allure_results: allure-results
-        #gh_pages: gh-pages
-        #allure_report: allure-report
+        gh_pages: gh-pages
+        allure_report: allure-report
         allure_history: allure-history
         keep_reports: 20
 
